# api-test-framework

./: .gitignore  BUG_REPORT.md  CLAUDE.md  CLAUDE_LOG.md  DELIVERABLES.md  ENHANCEMENTS.md  INSTALL.md  LICENSE  README.md  TEST_PLAN.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: audit.md
.claude/rules/: code-style.md  document-parsing.md  framework-rules.md  testing-standards.md
.claude/skills/: run-workflow.md  spec-parser.md  test-generator.md  validator-generator.md
.github/workflows/: ci.yml
apitf/: cli.py  eval_loop.py  http_client.py  sla_exceptions.py
apitf/providers/: __init__.py  anthropic.py  base.py  claude_cli.py
apitf/spec_parser/: base_parser.py  markdown_parser.py  openapi_parser.py  pdf_parser.py
apitf/validators/: countries_validator.py  country_validator.py  jsonplaceholder_validator.py  weather_validator.py
config/: environments.yaml
scripts/: advisor_review.py  merge_bug_reports.py  push.py  push.sh  setup_hooks.py  setup_hooks.sh  verify_bug_markers.py
specs/: jsonplaceholder.md
src/: http_client.py  sla_exceptions.py
src/reporters/: bug_reporter.py  deliverables_tracker.py
src/spec_parser/: base_parser.py  markdown_parser.py  openapi_parser.py  pdf_parser.py
src/validators/: base_validator.py  country_validator.py  (+1 more)
test_data/: cities.json  injection_payloads.json
test_plans/: baseline_test_plan.md  countries_test_plan.md  jsonplaceholder_test_plan.md  security_test_plan.md  weather_test_plan.md
tests/: conftest.py  test_baseline.py  test_countries.py  test_jsonplaceholder.py  test_security.py  test_weather.py
wiki/: Allure-Report-Guide.md  Bug-Lifecycle.md  CLI-Quickstart.md  Claude-Code-Skills.md  Design-Decisions.md  Framework-Components.md  Home.md  Rules-Reference.md  Test-Design-Techniques.md  Troubleshooting.md
